--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Crossover Video Portal</title>
+	<title>Video Portal</title>
+	<link rel="stylesheet" type="text/css" href="css/bundle.css">
 </head>
 <body>
-	<h2>Crossover Video Portal</h2>
 	<hr />
-	If you see this page, it means you have configured the app correctly. Put your client side code in /client folder and the application will start serving your code.
+	<div id="adminApp">
+	</div>
+<script type="text/javascript" src="scripts/bundle.js"></script>
 </body>
 </html>
